Fix Small Styling Errors (#187)
* fix import priority

* fix pm page and notifications

* fix dashboard buttons

* center dashboard button

* fix dashboard overlap

* update snapshot

* fix dashboard buttons

* update snapshots

* format

* fix login styling

* final styling fixes

* format and test

* update add new fp modal

* make navbar logo change cursor on hover

--- a/frontend/src/styles/documentclasspage.scss
+++ b/frontend/src/styles/documentclasspage.scss
@@ -30,12 +30,6 @@
     border-radius: 0px 15px 15px 0px;
 }
 
-.buttonimg{
-    margin: 9px;
-    max-width: 100px;
-    max-height: 100px;
-}
-
 .returnBtnContainer .returnButton{
     background-color: $link-color;
     border: 1px solid $link-color;
